--- a/quic.yaml
+++ b/quic.yaml
@@ -1,29 +1,37 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: aioquic-http3-pod
-  labels:
-    app: aioquic-http3 
+  name: aioquic-http3
 spec:
-  containers:
-    - name: aioquic-http3-container
-      image: aucslab/aioquic-http3-server:latest
-      imagePullPolicy: IfNotPresent               
-      ports:
-        - containerPort: 4433
-          protocol: UDP 
-      env:
-        - name: MY_NODE_NAME # The name of the node this Pod is scheduled on
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-      args:
-        - "python3"
-        - "examples/http3_server.py"
-        - "--certificate"
-        - "ssl_cert.pem"
-        - "--private-key"
-        - "ssl_key.pem"  
+  replicas: 3
+  selector:
+    matchLabels:
+      app: aioquic-http3
+  template:
+    metadata:
+      labels:
+        app: aioquic-http3
+    spec:
+      containers:
+        - name: aioquic-http3-container
+          image: aucslab/aioquic-http3-server:latest
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 4433
+              protocol: UDP
+          env:
+            - name: MY_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+          args:
+            - "python3"
+            - "examples/http3_server.py"
+            - "--certificate"
+            - "ssl_cert.pem"
+            - "--private-key"
+            - "ssl_key.pem"
+
 ---
 apiVersion: v1
 kind: Service
@@ -33,10 +41,10 @@ metadata:
     app: aioquic-http3
 spec:
   selector:
-    app: aioquic-http3 
+    app: aioquic-http3
   ports:
-    - protocol: UDP       
-      port: 4433          
-      targetPort: 4433   
+    - protocol: UDP
+      port: 4433
+      targetPort: 4433
       name: http3-udp
-  type: NodePort          
+  type: NodePort
